@@ -1,7 +1,9 @@
 ﻿using AllOverIt.Collections;
+using AllOverIt.Extensions;
 using AllOverIt.Fixture;
 using FluentAssertions;
 using System.Collections.Generic;
+using Xunit;
 
 namespace AllOverIt.Tests.Collections
 {
@@ -9,6 +11,7 @@ namespace AllOverIt.Tests.Collections
     {
         public class EmptyReadOnly : CollectionFixture
         {
+            [Fact]
             public void Should_Return_Empty_List()
             {
                 var actual = Collection.EmptyReadOnly<int>();
@@ -16,11 +19,20 @@ namespace AllOverIt.Tests.Collections
                 actual.Should().BeEmpty();
             }
 
+            [Fact]
             public void Should_Return_As_ReadOnly()
             {
                 var actual = Collection.EmptyReadOnly<int>();
 
-                actual.Should().BeOfType<IReadOnlyCollection<int>>();
+                actual.Should().BeAssignableTo<IReadOnlyCollection<int>>();
+            }
+
+            [Fact]
+            public void Should_Be_Immutable()
+            {
+                var actual = Collection.EmptyReadOnly<int>();
+
+                actual.Should().NotBeAssignableTo<ICollection<int>>();
             }
         }
     }
