@@ -2,6 +2,7 @@
 using AllOverIt.Fixture;
 using FluentAssertions;
 using System.Collections.Generic;
+using Xunit;
 
 namespace AllOverIt.Tests.Collections
 {
@@ -9,6 +10,7 @@ namespace AllOverIt.Tests.Collections
     {
         public class EmptyReadOnly : ListFixture
         {
+            [Fact]
             public void Should_Return_Empty_List()
             {
                 var actual = List.EmptyReadOnly<int>();
@@ -16,11 +18,20 @@ namespace AllOverIt.Tests.Collections
                 actual.Should().BeEmpty();
             }
 
+            [Fact]
             public void Should_Return_As_ReadOnly()
             {
                 var actual = List.EmptyReadOnly<int>();
 
-                actual.Should().BeOfType<IReadOnlyList<int>>();
+                actual.Should().BeAssignableTo<IReadOnlyCollection<int>>();
+            }
+
+            [Fact]
+            public void Should_Be_Immutable()
+            {
+                var actual = List.EmptyReadOnly<int>();
+
+                actual.Should().NotBeAssignableTo<ICollection<int>>();
             }
         }
     }
